<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/pizzaSizeSpinner"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeText" />

    <TextView
        android:id="@+id/sizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pizza_size"
        app:layout_constraintEnd_toEndOf="@+id/pizzaSizeSpinner"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="@+id/pizzaSizeSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/extraSauceCheckBox"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:onClick="setExtras"
        android:text="@string/extra_cheese"
        app:layout_constraintBottom_toTopOf="@+id/extraCheeseCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/extraCheeseCheckBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/extraCheeseCheckBox"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:onClick="setExtras"
        android:text="@string/extra_sauce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaSizeSpinner" />

    <RadioGroup
        android:id="@+id/sauceRadioGroup"
        android:layout_width="122dp"
        android:layout_height="99dp"
        android:layout_marginTop="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/extraSauceCheckBox"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/alfredoRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tomato" />

        <RadioButton
            android:id="@+id/tomatoRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alfredo" />
    </RadioGroup>

    <ListView
        android:id="@+id/availableToppingsListView"
        android:layout_width="163dp"
        android:layout_height="306dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selectedToppingsListView"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extraSauceCheckBox"
        app:layout_constraintVertical_bias="0.136" />

    <ListView
        android:id="@+id/selectedToppingsListView"
        android:layout_width="154dp"
        android:layout_height="304dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="163dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sauceRadioGroup"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="139dp"
        android:layout_height="66dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="32dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/removeToppingButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/removeToppingButton" />

    <Button
        android:id="@+id/addToppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="112dp"
        android:text="@string/add_topping"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/removeToppingButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableToppingsListView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/removeToppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="112dp"
        android:text="@string/remove_topping"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedToppingsListView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="19dp"
        android:text="@string/additional_toppings"
        app:layout_constraintBottom_toTopOf="@+id/availableToppingsListView"
        app:layout_constraintEnd_toEndOf="@+id/availableToppingsListView"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/availableToppingsListView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="28dp"
        android:text="@string/selected_toppings"
        app:layout_constraintBottom_toTopOf="@+id/selectedToppingsListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="68dp"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToppingButton"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="113dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/byo_pizza" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="68dp"
        android:text="@string/dollar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />


</androidx.constraintlayout.widget.ConstraintLayout>