<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/storeOrdersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/store_orders"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/orderSelectSpinner"
        android:layout_width="393dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeOrdersLabel" />

    <TextView
        android:id="@+id/orderTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/order_total"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderSelectSpinner" />

    <TextView
        android:id="@+id/orderTotalTextView"
        android:layout_width="265dp"
        android:layout_height="21dp"
        android:text="@string/zero_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/orderTotalLabel"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintLeft_toRightOf="@+id/orderTotalLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderTotalLabel"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/allOrdersListView"
        android:layout_width="408dp"
        android:layout_height="407dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTotalTextView" />

    <Button
        android:id="@+id/cancelOrderButton"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:text="@string/cancel_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allOrdersListView"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>
