<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:text="@string/ru_pizza"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="513dp"
        android:layout_marginTop="76dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/specialtyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#983939"
                android:onClick="displaySpecialtyActivity"
                app:srcCompat="@drawable/specialty_pizza" />

            <ImageView
                android:id="@+id/byoView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:onClick="displayBYOActivity"
                app:srcCompat="@drawable/byo_pizza" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/store_orders"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/current_orders"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/storeOrdersView"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#983939"
                android:onClick="displayStoreOrdersActivity"
                app:srcCompat="@drawable/store_orders" />

            <ImageView
                android:id="@+id/currentOrderView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000000"
                android:onClick="displayCurrentOrderActivity"
                app:srcCompat="@drawable/current_order" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="-2dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/specialty_pizza"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build_your_own"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>