<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="328dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="317dp"
            android:background="@color/black">

            <CheckBox
                android:id="@+id/sauceBox"
                android:layout_width="113dp"
                android:layout_height="52dp"
                android:layout_marginEnd="12dp"
                android:buttonTint="#FFFFFF"
                android:onClick="setExtra"
                android:text="@string/extra_sauce"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:buttonIconTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cheeseBox" />

            <TextView
                android:id="@+id/pizza_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/im_item"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/im_item"
                android:layout_width="132dp"
                android:layout_height="151dp"
                android:contentDescription="TODO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/pizza_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/pizza_type"
                app:layout_constraintTop_toBottomOf="@+id/pizza_type" />

            <TextView
                android:id="@+id/toppingsDisplay"
                android:layout_width="217dp"
                android:layout_height="95dp"
                android:layout_marginStart="4dp"
                android:hint="quantity"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.906" />

            <TextView
                android:id="@+id/sauceDisplay"
                android:layout_width="118dp"
                android:layout_height="48dp"
                android:hint="quantity"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.553"
                tools:layout_editor_absoluteX="4dp" />

            <Spinner
                android:id="@+id/specialtySizeSpinner"
                android:layout_width="139dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#000000"
                android:backgroundTint="#F4F2F2"
                android:dropDownSelector="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sauceBox" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="151dp"
                android:layout_height="61dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_to_order"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.589"
                app:layout_constraintStart_toEndOf="@+id/toppingsDisplay"
                app:layout_constraintTop_toBottomOf="@+id/quantityInput"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/cheeseBox"
                android:layout_width="113dp"
                android:layout_height="53dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:buttonTint="#FFFFFF"
                android:onClick="setExtra"
                android:text="@string/extra_cheese"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:buttonIconTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/quantityInput"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specialtySizeSpinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>